# Psi0

./: .gitignore  .gitmodules  README.md  README_zh.md  pyproject.toml  teleop_guide.md  zzyreadme.md
.profile/: rank0_w5.jsonl  rank0_w6.jsonl  rank0_w7.jsonl
baselines/dreamzero/: README.md  convert_psi0_to_dreamzero.py  g1_neck_training_full.sh  g1_sonic_training_full.sh  openloop_eval_simple_http.py  populate_hf_cache.py  requirements-dreamzero.txt  run_rank_server.sh  serve_dreamzero_g1_simple.py  simple_training_full.sh  simple_training_lora.sh  socket_test_optimized_AR.py  test_client_AR.py
baselines/dreamzero/slurm/: docker-test.sbatch
examples/simple/: openloop_eval.py
real/SONIC/: BRAINCO_HAND.md  DEPLOYMENT.md  README.md  README_zh.md  realsense_server.py
real/SONIC/scripts/: collect_psi0-sonic-data-manual.sh  collect_psi0-sonic-data.sh  sonic_start_teleop.sh
real/scripts/: deploy_psi0-sonic-rtc-client.sh  deploy_psi0-sonic-rtc-robot.sh
scripts/: train.py
scripts/data/: raw_sonic_to_psi_lerobot.py
scripts/deploy/: serve_psi0-rtc-sonic.sh  serve_psi0_simple.sh
scripts/replay/: enable_control.py  replay_real.py  replay_sim.py  replay_sim_launch.sh
scripts/train/: slurm_job.sh
scripts/train/psi0/: finetune-real-sonic-psi0.sh
src/dreamzero/eval_utils/: policy_client.py  policy_server.py  run_sim_eval.py  serve_dreamzero_wan22.py
src/dreamzero/groot/control/: tensorrt_utils.py
src/dreamzero/groot/vla/common/utils/: __init__.py
src/dreamzero/groot/vla/configs/: conf.yaml
src/dreamzero/groot/vla/configs/deepspeed/: zero2.json  zero2_offload.json  zero3.json
src/dreamzero/groot/vla/experiment/: __init__.py  base.py  denoise_val_callback.py  experiment.py  test_lerobot_sharded.py  utils.py
src/dreamzero/groot/vla/utils/: timer.py
src/psi/deploy/: psi0_serve_real_sonic.py  psi0_serve_simple.py  psi_serve_rtc_token-sonic.py
src/psi/models/: psi0.py
src/psi/trainers/: finetune.py  sonic.py
src/psi/utils/: utils.py
(+61 files in other folders)
